--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating']>= int(r)"
+    "    if restaurant['rating']>= int(rating)\n",
+    "        "
    ]
   },
   {
