--- a/index.ipynb
+++ b/index.ipynb
@@ -487,8 +487,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating']>= int(rating)\n",
-    "        "
+    "    if restaurant['rating'] >= int(rating):\n",
+    "        return 'True'"
    ]
   },
   {
